# oteapi-ontokb-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py
docs/: all_strategies.md  index.md
docs/api_reference/strategies/: download.md  filter.md  mapping.md  ontokb_access.md  ontokb_upload.md  parse.md  resource.md  sparql_query.md  transformation.md
oteapi_ontokb_plugin/: __init__.py
oteapi_ontokb_plugin/strategies/: application_rdf.py  ontokb.py  ontokb_access.py  ontokb_upload.py  sparql_query.py
tests/: test_parse.py
