[options.entry_points]
oteapi.download =
  oteapi_ontokb_plugin.fileDEMO = oteapi_ontokb_plugin.strategies.download:DemoFileStrategy
oteapi.filter =
  oteapi_ontokb_plugin.filter/DEMO = oteapi_ontokb_plugin.strategies.filter:DemoFilter
oteapi.mapping =
  oteapi_ontokb_plugin.mapping/DEMO = oteapi_ontokb_plugin.strategies.mapping:DemoMappingStrategy
oteapi.parse =
  oteapi_ontokb_plugin.text/jsonDEMO = oteapi_ontokb_plugin.strategies.parse:DemoJSONDataParseStrategy
oteapi.resource =
  oteapi_ontokb_plugin.DEMO-access-service = oteapi_ontokb_plugin.strategies.resource:DemoResourceStrategy
oteapi.transformation =
  oteapi_ontokb_plugin.script/DEMO = oteapi_ontokb_plugin.strategies.transformation:DummyTransformationStrategy
