[options.entry_points]
oteapi.resource =
  oteapi_ontokb_plugin.datasource/ontokb = oteapi_ontokb_plugin.strategies.ontokb_access:OntoKBResourceStrategy
  oteapi_ontokb_plugin.datasource/ontokb_upload = oteapi_ontokb_plugin.strategies.ontokb_upload:OntoKBUploadStrategy
oteapi.filter =
  oteapi_ontokb_plugin.filter/sparql_query = oteapi_ontokb_plugin.strategies.sparql_query:SPARQLQueryFilter
